--- a/addtaskdialog.ui
+++ b/addtaskdialog.ui
@@ -22,8 +22,20 @@
      <x>70</x>
      <y>240</y>
      <width>261</width>
-     <height>32</height>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>0</width>
+     <height>41</height>
+    </size>
+   </property>
+   <property name="font">
+    <font>
+     <family>Ink Free</family>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="orientation">
     <enum>Qt::Orientation::Horizontal</enum>
@@ -60,13 +72,14 @@
     <rect>
      <x>40</x>
      <y>40</y>
-     <width>71</width>
+     <width>101</width>
      <height>16</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>Kristen ITC</family>
+     <family>Ink Free</family>
+     <pointsize>12</pointsize>
     </font>
    </property>
    <property name="text">
@@ -84,7 +97,8 @@
    </property>
    <property name="font">
     <font>
-     <family>Kristen ITC</family>
+     <family>Ink Free</family>
+     <pointsize>12</pointsize>
     </font>
    </property>
    <property name="text">
